# ai-book

./: .eslintignore  .gitignore  .npmignore  .prettierignore  README.md  pyproject.toml
.github/workflows/: deploy-book.yml
.specify/memory/: constitution.md
backend/: .gitignore  README.md  ingest_book.py  main.py  pyproject.toml  requirements.txt
backend/api/: index.py  requirements.txt
backend/backend/: .gitignore  Procfile  check_qdrant.py  ingest_scrape.py  pyproject.toml  requirements.txt  test_implementation.py  test_rag_validation.py
backend/tests/: __init__.py  conftest.py
book/: CONCLUSION.md  INTRO.md  README.md  index.md  references.md  spec.md
book/ai-integration/: README.md
book/case-studies/: README.md
book/challenges-ethics/: README.md
book/deployment/: README.md
book/diagrams/: diagrams.txt
book/fundamentals/: README.md
book/humanoid-robotics/: README.md
book/introduction/: README.md
book/tutorials/: README.md
docs/: api.md  quickstart.md
docusaurus-book/: .eslintrc.js  docusaurus.config.js  package-lock.json  package.json  sidebars.js
docusaurus-book/docs/: accessibility.md  ai-integration.md  case-studies.md  challenges.md  deployment.md  embodied-fundamentals.md  humanoid-design.md  intro.md  introduction.md  module-1-ros2.mdx  module-2-digital-twin.mdx  module-3-ai-robot-brain.mdx  module-4-vision-language-action.mdx  quickstart.md  tutorials.md
docusaurus-book/scripts/: optimize-images.js
history/adr/: ADR-1-documentation-platform.md  ADR-2-content-structure.md  ADR-3-interactive-elements.md  (+1 more)
src/lib/: auth.py  (+3 more)
(+223 files in other folders)
